tests/snapshots/examples_fixtures/imports__import_in_function_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/import_in_function_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E017]: IMPORT SCOPE

Import statements must be at the top of the file.

  --> examples/imports/import_in_function_error.flx:2:5
  |
2 |     import Modules.Math
  |     ^^^^^^^^^^^^^^^^^^^

Hint:
  Move all import statements before any other declarations.
== stdout ==
<not executed>
